--- a/social_media_platforms.links.menu.yml
+++ b/social_media_platforms.links.menu.yml
@@ -1,5 +1,6 @@
 social_media_platforms.settings:
   title: Social Media Platforms
+  description: 'Configure the social media platform urls'
   parent: system.admin_config_system
   route_name: social_media_platforms.settings
   weight: 10
