Fixed faulty test, where it didn't check properly if the target=_blank was set

--- a/config/install/social_media_platforms.settings.yml
+++ b/config/install/social_media_platforms.settings.yml
@@ -28,3 +28,8 @@ platforms:
     label: 'Instagram'
     url: null
     weight: 4
+
+  pinterest:
+    label: 'Pinterest'
+    url: null
+    weight: 5
