--- a/social_media_platforms.routing.yml
+++ b/social_media_platforms.routing.yml
@@ -1,7 +1,7 @@
 social_media_platforms.settings:
-  path: '/admin/config/system/social-media-platforms'
+  path: '/admin/config/services/social-media-platforms'
   defaults:
     _title: 'Social Media Platforms'
     _form: 'Drupal\social_media_platforms\Form\SettingsForm'
   requirements:
-    _permission: 'administer site configuration'
+    _permission: 'administer social media platforms'
