--- a/social_media_platforms.info.yml
+++ b/social_media_platforms.info.yml
@@ -4,3 +4,5 @@ description: 'Allows to add social media links to the pages via a block.'
 package: Custom
 core_version_requirement: ^10
 configure: social_media_platforms.settings
+dependencies:
+  - 'block:block'
