Issue #3485558 by andreasderijcke, niharika.s, dastan56: Cannot install 1.0.2 version with drupal 10.3.6

--- a/social_media_platforms.info.yml
+++ b/social_media_platforms.info.yml
@@ -5,4 +5,4 @@ package: Custom
 core_version_requirement: ^10 || ^11
 configure: social_media_platforms.settings
 dependencies:
-  - 'block:block'
+  - 'drupal:block'
