--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
         }
     ],
     "require": {
-        "drupal/domain": "^2.0@beta",
         "drupal/core": "^10.2 || ^11"
     },
     "require-dev": {
         "phpunit/phpunit": "^9 || ^10",
         "drupal/coder": "^8.3.13"
+    },
+    "suggest": {
+	"drupal/domain": "^2.0@beta"
     },
     "extra": {
         "drupal": {
